<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mineralDetalle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray"
            android:paddingBottom="2dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="2dp"
            android:text="@string/durezaST"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/durezaTV"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="center_horizontal"
            android:text="@string/valorDurezaST"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/darker_gray"
            android:textSize="34sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.89"
        android:orientation="vertical"
        android:paddingLeft="10dp" >

        <TextView
            android:id="@+id/nombreMineralTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nombreMineralST"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/composicionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-2dp"
            android:text="@string/composicionST"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/fechaTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:text="@string/fechaST"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:layout_marginRight="0dp"
        android:gravity="right"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/disponibilidadTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray"
            android:paddingBottom="2dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="2dp"
            android:text="@string/disponibilidadST"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/notasTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="1dp"
            android:background="@android:color/darker_gray"
            android:paddingBottom="2dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="2dp"
            android:text="@string/notasST"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>